--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Startup</title>
 	<link href="https://fonts.googleapis.com/css?family=Kalam Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="szemi.github.io/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
